--- a/header-footer.html
+++ b/header-footer.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/static/style.css" rel="stylesheet">
-	<link href="/static/bootstrap.min.css" rel="stylesheet">
-	<script src="/static/jquery.js"></script>
-  	<script src="/static/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<title>Header y Footer</title>
 </head>
 <body>
