--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="./static/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
+	<title>erasmusMadrid | Home</title>
+
 
 	<script>
 	$(document).ready(function(){
@@ -25,15 +27,14 @@
 		<!--Cargar el header con los formularios de registro y login del header-footer.html-->
 		<div id="load-header"></div>
 		<div id="load-registry"></div>
-		<div id="load-log"></div>	
+		<div id="load-log"></div>
 
 		<div id="content">
 			<div class="jumbotron">
 			    <div class="container">
-			        <h1><a href="#">erasmusMadrid</h1>
-
+			        <h1>erasmusMadrid</h1>
 			        <p>Descubre, Comparte, Disfruta</p>
-			        <a href="#">Aprende más</a>
+			        <a href="listaEventos.html">Aprende más</a>
 			    </div>
 			</div>
 
@@ -47,26 +48,26 @@
 			        <div class="row">
 			            <div class="col-md-4">
 			                <div class="thumbnail">
-			                    <img src="/static/night.jpg">
+			                    <img src="./static/night.jpg">
 			                    <h3>Vida nocturna</h3>
 			                    <p>Deja que la noche te confunda</p>
-			                    <p><a href="#">Fiestas sorprendentes</a></p>
+			                    <p><a href="listaEventos.html">Fiestas sorprendentes</a></p>
 			                </div>
 			            </div>
 			            <div class="col-md-4">
 			                <div class="thumbnail">
-			                    <img src="/static/debod.jpg">
+			                    <img src="./static/debod.jpg">
 			                     <h3>Turismo</h3>
 			                    <p>Saca tu lado culto</p>
-			                    <p><a href="#">Lugares turísticos</a></p>
+			                    <p><a href="listaEventos.html">Lugares turísticos</a></p>
 			                </div>
 			            </div>
 			            <div class="col-md-4">
 			                <div class="thumbnail">
-			                    <img src="/static/tio-pepe.jpg">
+			                    <img src="./static/tio-pepe.jpg">
 			                    <h3>Gastronomía</h3>
 			                    <p>Aprende de la dieta mediterránea</p>
-			                    <p><a href="#">Tapas y cañas</a></p>
+			                    <p><a href="listaEventos.html">Tapas y cañas</a></p>
 			                </div>
 			            </div>
 			        </div>
