--- a/listaEventos.html
+++ b/listaEventos.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="./static/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
+    <title>erasmusMadrid | Lista de eventos</title>
+
 
     <script>
     $(document).ready(function(){
-        $("#load-header").load("/header-footer.html #header");
-        $("#load-registry").load("/header-footer.html #formRegistryModal");
-        $("#load-log").load("/header-footer.html #formLogModal");
-        $("#load-footer").load("/header-footer.html #footer")
+        $("#load-header").load("header-footer.html #header");
+        $("#load-registry").load("header-footer.html #formRegistryModal");
+        $("#load-log").load("header-footer.html #formLogModal");
+        $("#load-footer").load("header-footer.html #footer")
     });
     </script>
 
@@ -62,7 +63,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img src="/static/bp1.jpg" style="width:653px;height:280px;">
+                    <img class="img-responsive" src="./static/bp1.jpg" style="width:653px;height:280px;">
                 </a>
             </div>
             <div class="col-md-5">
@@ -81,7 +82,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img src="/static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
+                    <img class="img-responsive" src="./static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
                 </a>
             </div>
             <div class="col-md-5">
@@ -100,7 +101,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img src="/static/AranjuezTour.jpg" style="width:653px;height:280px;">
+                    <img class="img-responsive" src="./static/AranjuezTour.jpg" style="width:653px;height:280px;">
                 </a>
             </div>
             <div class="col-md-5">
@@ -118,7 +119,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img src="/static/Bravas.jpg" style="width:653px;height:280px;">
+                    <img class="img-responsive" src="./static/Bravas.jpg" style="width:653px;height:280px;">
                 </a>
             </div>
             <div class="col-md-5">
@@ -136,7 +137,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img src="/static/fiesta erasmus.jpg" style="width:653px;height:280px;">
+                    <img class="img-responsive" src="./static/fiesta erasmus.jpg" style="width:653px;height:280px;">
                 </a>
             </div>
             <div class="col-md-5">
