img de lista de eventos sin enlace

--- a/listaEventos.html
+++ b/listaEventos.html
@@ -62,15 +62,14 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="./static/bp1.jpg" style="width:653px;height:280px;">
-                </a>
+                <img class="img-responsive" src="./static/bp1.jpg" style="width:653px;height:280px;">
             </div>
             <div class="col-md-5">
                 <h3>Beer-Pong Challenge</h3>
                 <h4><div id="14270474947719" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:40" type="text/javascript"></script></div></h4>
                 <p>El BEER PONG es un juego de beber de origen norteamericano en el que los jugadores tratan de encestar desde el extremo de una mesa, con pelotas de ping-pong en vasos llenos de cerveza. Se juega por equipos formados por dos personas y 6 vasos dispuestos de forma triangular.
-Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universitaria para desafiar otros estudiantes y ganar premios y sorpresas!</p>
+                Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universitaria para desafiar otros estudiantes y ganar premios y sorpresas!
+                </p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
@@ -81,9 +80,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <!-- Project Two -->
         <div class="row">
             <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="./static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
-                </a>
+                <img class="img-responsive" src="./static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
             </div>
             <div class="col-md-5">
                 <h3>Conoce Madrid</h3>
@@ -100,9 +97,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <!-- Project Three -->
         <div class="row">
             <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="./static/AranjuezTour.jpg" style="width:653px;height:280px;">
-                </a>
+                <img class="img-responsive" src="./static/AranjuezTour.jpg" style="width:653px;height:280px;">
             </div>
             <div class="col-md-5">
                 <h3>Visita Aranjuez</h3>
@@ -118,9 +113,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <!-- Project Four -->
         <div class="row">
             <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="./static/Bravas.jpg" style="width:653px;height:280px;">
-                </a>
+                <img class="img-responsive" src="./static/Bravas.jpg" style="width:653px;height:280px;">
             </div>
             <div class="col-md-5">
                 <h3>Bravas y Cerves</h3>
@@ -136,9 +129,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <!-- Project Five -->
         <div class="row">
             <div class="col-md-7">
-                <a href="#">
                     <img class="img-responsive" src="./static/fiesta erasmus.jpg" style="width:653px;height:280px;">
-                </a>
             </div>
             <div class="col-md-5">
                 <h3>Erasmus Party</h3>
