--- a/header-footer.html
+++ b/header-footer.html
@@ -21,6 +21,7 @@
 	    	<div class="pull-right" id="nav">
 		        <button type="button" class="button-nav" id="log" data-toggle="modal" data-target="#formLogModal">Log in</button>
 		       	<button type="button" class="button-nav" id="sign" data-toggle="modal" data-target="#formRegistryModal">Sign in</button>
+		       	<button type="button" class="button-nav" id="createEvent" data-toggle="modal" data-target="#formCreateEvent">Crear Evento</button>
 		    </div>
 	    </div>
     </div>
@@ -91,6 +92,59 @@
 						<div class="modal-footer">
 							<button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
 							<button type="submit" class="btn btn-success pull-right">Aceptar</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="formCreateEvent" tabindex="-1" role="dialog" aria-labellendy="formModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="formModalLabel"><strong>Formulario creación de evento</strong></h4>
+				</div>
+				<div class="modal-body">
+					<form method="post" action="/registry">
+						<div class="form-group">
+							<label for="title">Título</label>
+							<input type="text" class="form-control" id="title" name="title" placeholder="Introduzca el título">
+						</div>
+						<div class="form-group">
+							<label for="descripcion">Descripción</label>
+							<input type="descripcion" class="form-control" id="descripcion" name="descripcion" placeholder="Introduzca la descripción del evento">
+						</div>
+						<div class="form-group">
+							<label for="Categoria">Categoría</label>
+							<select id="categoria">
+                             <option value="turismo">Turismo</option>
+                             <option value="gastronomia">Gastronomía</option>
+                             <option value="vidaNocturna">Vida nocturna</option>         
+                        	</select>
+						</div>
+						<div class="form-group">
+							<label for="direccion">Dirección del evento</label>
+							<input type="direccion" class="form-control" id="direccion" name="direccion" placeholder="Introduzca la dirección del evento">
+						</div>
+						<div class="form-group">
+							<label for="date">Fecha del evento</label>
+							<input type="date" class="form-control" id="date" name="date" placeholder="dd/mm/aaaa">
+						</div>
+							<div class="form-group">
+							<label for="comentario">Comentario</label>
+							<input type="comentario" class="form-control" id="comentario" name="comentario" placeholder="Introduzca un comentario relacionado con el evento">
+						</div>
+						<div>
+							<label for="foto">Introduzca foto del evento</label>
+							<form action="demo_form.asp">
+							  <input type="file" name="img">  
+							</form>
+						</div>						
+						<div class="modal-footer">
+							<button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
+							<button type="submit" class="btn btn-success pull-right">Guardar</button>
 						</div>
 					</form>
 				</div>
