--- a/listaEventos.html
+++ b/listaEventos.html
@@ -38,7 +38,7 @@
                     <small>
                         <p></p>
                         <p></p>
-                        <p>Categoría               </p>
+                        <p>Categoría</p>
                         <select>
                              <option value="todos">Todos</option>
                              <option value="turismo">Turismo</option>
@@ -70,6 +70,10 @@
                 <p>El BEER PONG es un juego de beber de origen norteamericano en el que los jugadores tratan de encestar desde el extremo de una mesa, con pelotas de ping-pong en vasos llenos de cerveza. Se juega por equipos formados por dos personas y 6 vasos dispuestos de forma triangular.
                 Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universitaria para desafiar otros estudiantes y ganar premios y sorpresas!
                 </p>
+                <h2>Cuando</h2>
+                <p>5 Junio 2015</p>
+                <h2>Donde</h2>
+                <p>Serrano 15 Madrid</p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
@@ -86,7 +90,7 @@
                 <h3>Conoce Madrid</h3>
                 <h4><div id="14270474947718" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:40" type="text/javascript"></script></h4>
                 <p>Disfruta de una visita guiada gratuita por el Madrid de los Austrias y los Borbones, en castellano y en inglés, todos los sábados y domingos a las 11 frente al oso y el madroño.</p>
-                 <p>Enjoy a free tour around the royal Madrid, in English and Spanish, every saturday and sanday at 11 in front of the oso y el madroño statue.</p>
+                 <p>Enjoy a free tour around the royal Madrid, in English and Spanish, every saturday and sunday at 11 in front of the oso y el madroño statue.</p>
                 <a class="btn btn-primary" href="#">Ver evento  <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
