prueba del perfil

--- a/perfil.html
+++ b/perfil.html
@@ -10,6 +10,8 @@
 	<meta charset="UTF-8">
 	<title>erasmusMadrid | Perfil</title>
 
+	<script src="./static/script.js"></script>
+<!--
 	<script>
 	$(document).ready(function(){
 		$("#load-header").load("header-footer.html #header");
@@ -25,7 +27,7 @@
 		})		
 	});
 	</script>
-
+-->
 </head>
 <body>
 	<div id="wrapper">
@@ -118,6 +120,7 @@
 						<a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
 					</div>
 				</div>
+				<hr>				
 			</div>
 
 	<!-- /lista de evento -->
