--- a/profile_prueba.html
+++ b/profile_prueba.html
@@ -29,15 +29,15 @@
 				<img align="left" class="fb-image-lg" src="http://lorempixel.com/850/280/nightlife/5/" alt="Profile image example"/>
 				<img align="left" class="fb-image-profile thumbnail" src="./static/marco.jpg" alt="Profile image example"/>
 				<div class="fb-profile-text">
-					<h1 id="profile-name">Marco y Amedio</h1>
+					<h1 id="profile-name">Marco y Amedio <small><span class="glyphicon glyphicon-cog" id="config"></span></small></h1>
 					<p>Buscando a mi madre por Madrid</p>
 				</div>
 			</div>
 		</div>
 		<!-- /encabezado -->
 
-		<!-- configuracion 
-		<div id="config">
+		<!-- configuracion -->
+		<div id="configTitle">
 			<h2>Configuración</h2>
 		</div>
 		<div class="container" id="configOptions">
@@ -49,7 +49,7 @@
 			</ul>
 		</div>
 		<div class="col-md-12"><hr></div>
-	 /configuracion -->
+		<!-- /configuracion -->
 
 	<!-- lista de eventos -->
 		<div id="profileEvents">
