--- a/evento.html
+++ b/evento.html
@@ -11,14 +11,7 @@
     <meta charset="UTF-8">
     <title>erasmusMadrid | Evento</title>
 
-    <script>
-      $(document).ready(function(){
-        $("#load-header").load("header-footer.html #header");
-        $("#load-registry").load("header-footer.html #formRegistryModal");
-        $("#load-log").load("header-footer.html #formLogModal");
-        $("#load-footer").load("header-footer.html #footer")
-      });
-    </script>
+    <script src="./static/script.js"></script>
 
     <script src="http://maps.googleapis.com/maps/api/js"></script>
 
