--- a/index.html
+++ b/index.html
@@ -12,15 +12,8 @@
     <meta charset="UTF-8">
 	<title>erasmusMadrid | Home</title>
 
+	<script src="./static/script.js"></script>
 
-	<script>
-		$(document).ready(function(){
-			$("#load-header").load("header-footer.html #header");
-			$("#load-registry").load("header-footer.html #formRegistryModal");
-			$("#load-log").load("header-footer.html #formLogModal");
-			$("#load-footer").load("header-footer.html #footer")
-		});
-	</script>
 </head>
 
 <body>
