--- a/listaEventos.html
+++ b/listaEventos.html
@@ -11,15 +11,7 @@
     <meta charset="UTF-8">
     <title>erasmusMadrid | Lista de eventos</title>
 
-
-    <script>
-    $(document).ready(function(){
-        $("#load-header").load("header-footer.html #header");
-        $("#load-registry").load("header-footer.html #formRegistryModal");
-        $("#load-log").load("header-footer.html #formLogModal");
-        $("#load-footer").load("header-footer.html #footer")
-    });
-    </script>
+    <script src="./static/script.js"></script>
 
 </head>
 
