Añadido cerar evento en el header

--- a/listaEventos.html
+++ b/listaEventos.html
@@ -20,7 +20,8 @@
         <!--Cargar el header con los formularios de registro y login del header-footer.html-->
         <div id="load-header"></div>
         <div id="load-registry"></div>
-        <div id="load-log"></div>  
+        <div id="load-log"></div>
+        <div id="load-createevent"></div>
     <!-- Page Content -->
     <div class="container" id="eventList">
         <!-- Page Heading -->
