--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<div id="load-header"></div>
 		<div id="load-registry"></div>
 		<div id="load-log"></div>
+		<div id="load-createevent"></div>
 
 		<div id="content">
 			<div class="jumbotron">
