Comunication with the server with a POST example

--- a/header-footer.html
+++ b/header-footer.html
@@ -35,7 +35,7 @@
 					<h4 class="modal-title" id="formModalLabel"><strong>Formulario de registro</strong></h4>
 				</div>
 				<div class="modal-body">
-					<form method="POST" action="/registry">
+					<form class="register-modal" method="POST" action="/registry">
 						<div class="form-group">
 							<label for="username">Usuario</label>
 							<input type="text" class="form-control" id="username" name="username" placeholder="Introduzca su usuario">
