a medias comentarios evento

--- a/header-footer.html
+++ b/header-footer.html
@@ -107,7 +107,7 @@
 					<h4 class="modal-title" id="formModalLabel"><strong>Formulario creación de evento</strong></h4>
 				</div>
 				<div class="modal-body">
-					<form method="post" action="/registry">
+					<form method="post" action="/createEvent">
 						<div class="form-group">
 							<label for="title">Título</label>
 							<input type="text" class="form-control" id="title" name="title" placeholder="Introduzca el título">
