botón suscribirse en listaEventos

--- a/listaEventos.html
+++ b/listaEventos.html
@@ -51,6 +51,25 @@
             </div>
         </div>
         <!-- /.row -->
+
+        <div class="row prototype">
+            <div class="col-md-7">
+                <img class="img-responsive" src="./static/bp1.jpg" style="width:653px;height:280px;">
+            </div>
+            <div class="col-md-5">
+                <h3 id="title"></h3>
+                <h4><div id="14270474947719" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:40" type="text/javascript"></script></div></h4>
+                <p id="description"></p>
+                <h2>Cuando</h2>
+                <p id="time"></p>
+                <h2>Donde</h2>
+                <p id="address"></p>
+                <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
+            </div>
+        </div>
+        <hr class="prototype">
+
         <!-- Project One -->
         <div class="row">
             <div class="col-md-7">
@@ -67,6 +86,7 @@
                 <h2>Donde</h2>
                 <p>Serrano 15 Madrid</p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
             </div>
         </div>
         <!-- /.row -->
