--- a/listaEventos.html
+++ b/listaEventos.html
@@ -12,6 +12,7 @@
     <title>erasmusMadrid | Lista de eventos</title>
 
     <script src="./static/script.js"></script>
+    <script src="static/listaEventos.js"></script>
 
 </head>
 
@@ -76,17 +77,13 @@
                 <img class="img-responsive" src="./static/bp1.jpg" style="width:653px;height:280px;">
             </div>
             <div class="col-md-5">
-                <h3>Beer-Pong Challenge</h3>
+                <h3 id="title"></h3>
                 <h4><div id="14270474947719" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:40" type="text/javascript"></script></div></h4>
-                <p>El BEER PONG es un juego de beber de origen norteamericano en el que los jugadores tratan de encestar desde el extremo de una mesa, con pelotas de ping-pong en vasos llenos de cerveza. Se juega por equipos formados por dos personas y 6 vasos dispuestos de forma triangular.
-                Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universitaria para desafiar otros estudiantes y ganar premios y sorpresas!
+                <p id="description">
                 </p>
-                <h2>Cuando</h2>
-                <p>5 Junio 2015</p>
-                <h2>Donde</h2>
-                <p>Serrano 15 Madrid</p>
+                <p id="time"></p>
+                <p id="address"></p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
             </div>
         </div>
         <!-- /.row -->
