--- a/listaEventos.html
+++ b/listaEventos.html
@@ -11,7 +11,6 @@
     <meta charset="UTF-8">
     <title>erasmusMadrid | Lista de eventos</title>
 
-    <script src="./static/script.js"></script>
     <script src="static/listaEventos.js"></script>
 
 </head>
@@ -52,8 +51,8 @@
             </div>
         </div>
         <!-- /.row -->
-
-        <div class="row prototype">
+        
+        <!--<div class="row prototype">
             <div class="col-md-7">
                 <img class="img-responsive" src="./static/bp1.jpg" style="width:653px;height:280px;">
             </div>
@@ -69,7 +68,7 @@
                 <a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
             </div>
         </div>
-        <hr class="prototype">
+        <hr class="prototype">-->
 
         <!-- Project One -->
         <div class="row">
