--- a/evento.html
+++ b/evento.html
@@ -100,9 +100,49 @@
         </div>
         <!-- /.row -->
 
-        <div class="comment-header">
-            <h3 class="page-header">Comentarios</h3>
+        <div class="row">
+            <div class="col-lg-12">
+                <h3 class="page-header" id="eventTitle">Comentarios</h3>
+                <form class="form-inline" role="form" method="POST" action="/comment">
+                    <textarea class="form-control" type="text" placeholder="Escribe tu comentario"/></textarea>
+                    <button type="submit" onclick='addComment()' class="btn btn-default pull-right">Añadir</button>
+                </form>
+                <br>
+                <ul class="listComments">
+                    <br>
+                    <li>
+                        <div class="commenterImage">
+                          <img src="http://lorempixel.com/50/50/people/6" />
+                        </div>
+                        <div class="commentText">
+                            <p class="">Hello this is a test comment.</p> <span class="date sub-text">on March 5th, 2014</span>
+                        </div>
+                    </li>
+                    <br>
+                    <li>
+                        <div class="commenterImage">
+                          <img src="http://lorempixel.com/50/50/people/7" />
+                        </div>
+                        <div class="commentText">
+                            <p class="">Hello this is a test comment and this comment is particularly very long and it goes on and on and on.</p> <span class="date sub-text">on March 5th, 2014</span>
+                        </div>
+                    </li>
+                    <br>
+                    <li>
+                        <div class="commenterImage">
+                          <img src="http://lorempixel.com/50/50/people/9" />
+                        </div>
+                        <div class="commentText">
+                            <p class="">Hello this is a test comment.</p> <span class="date sub-text">on March 5th, 2014</span>
+                        </div>
+                    </li>
+                    <br>
+                </ul>
+            </div>
         </div>
+        <br>
+        <br>
+
 
             <!--<h3 class="page-header">Comentarios</h3>
             <button type="button" class="close" aria-hidden="true">&times;</button>
@@ -147,7 +187,7 @@
             </div>-->
         <!-- Footer -->
         <footer>
-<div id="load-footer"></div>
+            <div id="load-footer"></div>
             <!-- /.row -->
         </footer>
 
