arreglo input login aceptar terminos de uso

--- a/header-footer.html
+++ b/header-footer.html
@@ -23,7 +23,7 @@
 		        <button type="button" class="button-nav logIn" id="log" data-toggle="modal" data-target="#formLogModal">Log in</button>
 		       	<button type="button" class="button-nav signIn" id="sign" data-toggle="modal" data-target="#formRegistryModal">Sign in</button>
 		       	<button type="button" class="button-nav createEvent" id="createEvent" data-toggle="modal" data-target="#formCreateEvent" style="display:none">Crear Evento</button>
-		       	<button type="button" class="button-nav signOut" id="sign" >Sign out</button>
+		       	<button type="button" class="button-nav signOut" id="sign" style="display:none" >Sign out</button>
 		    </div>
 	    </div>
     </div>
@@ -59,9 +59,9 @@
 							<input type="date" class="form-control" id="date" name="date" placeholder="dd/mm/aaaa">
 						</div>
 						<div class="checkbox">
-							<label>
-								<input type="checkbox">Acepto las condiciones y confirmo que he leído la política de datos de la empresa, así como el uso de cookies.
-							</label>
+							<input type="checkbox" style="width: 32px">
+							<label>	Acepto las condiciones y confirmo que he leído la política de datos de la empresa, así como el uso de cookies.
+							</label>							
 						</div>
 						<div>
 							<label style="color:red"class ="errorMessage"></label>
