Deleted all events and added the prototype

--- a/listaEventos.html
+++ b/listaEventos.html
@@ -15,16 +15,16 @@
 
 </head>
 
-<body>    
+<body>
     <div id="wrapper">
         <!--Cargar el header con los formularios de registro y login del header-footer.html-->
         <div id="load-header"></div>
         <div id="load-registry"></div>
-        <div id="load-log"></div>  
+        <div id="load-log"></div>
     <!-- Page Content -->
     <div class="container" id="eventList">
         <!-- Page Heading -->
-        <div class="row">
+        <div class="row search-menu">
             <div class="col-lg-12">
                 <h1 class="page-header">Búsqueda de eventos
                     <small>
@@ -35,42 +35,38 @@
                              <option value="todos">Todos</option>
                              <option value="turismo">Turismo</option>
                              <option value="gastronomia">Gastronomía</option>
-                             <option value="vidaNocturna">Vida nocturna</option>         
+                             <option value="vidaNocturna">Vida nocturna</option>
                         </select>
                         <select>
                              <option value="recentDate">Más reciente</option>
                              <option value="lastDate">Más antigua</option>
-                             <option value="mvp">Mejor valorada</option>         
-                        </select>    
+                             <option value="mvp">Mejor valorada</option>
+                        </select>
                         <form id="tfnewsearch" method="get" action="http://www.google.com">
                             <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="search" class="tfbutton">
                         </form>
-                        <div class="tfclear"></div> 
+                        <div class="tfclear"></div>
                     </small>
                 </h1>
             </div>
         </div>
         <!-- /.row -->
-        
-        <!--<div class="row prototype">
+
+        <div class="row prototype event">
             <div class="col-md-7">
-                <img class="img-responsive" src="./static/bp1.jpg" style="width:653px;height:280px;">
+                <img class="event-image img-responsive" src="" style="width:653px;height:280px;">
             </div>
             <div class="col-md-5">
                 <h3 id="title"></h3>
-                <h4><div id="14270474947719" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:40" type="text/javascript"></script></div></h4>
                 <p id="description"></p>
-                <h2>Cuando</h2>
-                <p id="time"></p>
-                <h2>Donde</h2>
-                <p id="address"></p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
                 <a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
             </div>
+            <hr>
         </div>
-        <hr class="prototype">-->
 
-        <!-- Project One -->
+
+        <!-- Project One-->
         <div class="row">
             <div class="col-md-7">
                 <img class="img-responsive" src="./static/bp1.jpg" style="width:653px;height:280px;">
@@ -84,12 +80,13 @@
                 <p id="address"></p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
+            <hr>
         </div>
-        <!-- /.row -->
 
-        <hr>
 
-        <!-- Project Two -->
+
+
+        <!-- Project Two
         <div class="row">
             <div class="col-md-7">
                 <img class="img-responsive" src="./static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
@@ -101,12 +98,13 @@
                  <p>Enjoy a free tour around the royal Madrid, in English and Spanish, every saturday and sunday at 11 in front of the oso y el madroño statue.</p>
                 <a class="btn btn-primary" href="#">Ver evento  <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
+            <hr>
         </div>
-        <!-- /.row -->
+        -->
 
-        <hr>
 
-        <!-- Project Three -->
+
+        <!-- Project Three
         <div class="row">
             <div class="col-md-7">
                 <img class="img-responsive" src="./static/AranjuezTour.jpg" style="width:653px;height:280px;">
@@ -117,12 +115,11 @@
                 <p>Seguimos conociendo los alrededores más bonitos de Madrid, en esta ocasión visita guiada a Aranjuez y Chinchón, Sábado 11 de Abril, 19 euros transporte incluido, quedamos a las 9:00 en la estación de Atocha.</p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
+            <hr>
         </div>
-        <!-- /.row -->
+        -->
 
-        <hr>
-
-        <!-- Project Four -->
+        <!-- Project Four
         <div class="row">
             <div class="col-md-7">
                 <img class="img-responsive" src="./static/Bravas.jpg" style="width:653px;height:280px;">
@@ -133,12 +130,11 @@
                 <p>Disfruta de la tapa más famosa de Madrid acompañada de otros estudiantes de Erasmus con los que podrás practicar el Castellano y otros idiomas, todos los Martes a las 19:00 casa Pepe.</p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
+            <hr>
         </div>
-        <!-- /.row -->
+        -->
 
-        <hr>
-
-        <!-- Project Five -->
+        <!-- Project Five
         <div class="row">
             <div class="col-md-7">
                     <img class="img-responsive" src="./static/fiesta erasmus.jpg" style="width:653px;height:280px;">
@@ -150,9 +146,7 @@
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
-        <!-- /.row -->
-
-        <hr>
+        -->
 
         <!-- Pagination -->
         <div class="row text-center">
@@ -186,7 +180,7 @@
 
         <hr>
 
-        
+
     </div><!-- Footer -->
         <footer>
             <div id="load-footer"></div>
