--- a/listaEventos.html
+++ b/listaEventos.html
@@ -66,7 +66,7 @@
         </div>
 
 
-        <!-- Project One-->
+        <!-- Project One
         <div class="row">
             <div class="col-md-7">
                 <img class="img-responsive" src="./static/bp1.jpg" style="width:653px;height:280px;">
@@ -82,7 +82,7 @@
             </div>
             <hr>
         </div>
-
+		-->
 
 
 
