--- a/header-footer.html
+++ b/header-footer.html
@@ -52,24 +52,35 @@
 						</div>
 						<div class="form-group">
 							<label for="email">Dirección de Email</label>
-							<input type="email" class="form-control" id="email" name="email" placeholder="Introduzca su email">
+							<input type="text" class="email form-control" id="email" name="email" placeholder="Introduzca su email">
 						</div>
 						<div class="form-group">
 							<label for="date">Fecha de nacimiento</label>
-							<input type="date" class="form-control" id="date" name="date" placeholder="dd/mm/aaaa">
+							<input type="date" class="date form-control" id="date" name="date" placeholder="dd/mm/aaaa">
 						</div>
 						<div class="checkbox">
 							<input type="checkbox" style="width: 32px">
 							<label>	Acepto las condiciones y confirmo que he leído la política de datos de la empresa, así como el uso de cookies.
 							</label>							
 						</div>
-						<div>
-							<label style="color:red"class ="errorMessage"></label>
+						<div style="display:none" class="password-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>
+						<div style="display:none" class="email-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>
+						<div style="display:none" class="date-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
-
-							<button type="submit" onclick='checkPassword()'class="btn btn-success pull-right">Guardar</button>
+							<button type="submit" class="btn btn-success pull-right">Guardar</button>
 						</div>
 					</form>
 				</div>
