--- a/header-footer.html
+++ b/header-footer.html
@@ -39,28 +39,28 @@
 				<div class="modal-body">
 					<form class="register-modal" method="POST" action="/registry">
 						<div class="form-group">
-							<label for="username">Usuario</label>
-							<input type="text" class="form-control" id="username" name="username" placeholder="Introduzca su usuario">
+							<label for="username">Usuario *</label>
+							<input type="text" class="usuario form-control" id="username" name="username" placeholder="Introduzca su usuario">
 						</div>
 						<div class="form-group">
-							<label for="password">Contraseña</label>
+							<label for="password">Contraseña *</label>
 							<input type="password" class="password1 form-control" id="password" name="password" placeholder="Introduzca su contraseña">
 						</div>
 						<div class="form-group">
-							<label for="password">Contraseña</label>
+							<label for="password">Contraseña *</label>
 							<input type="password" class="password2 form-control" id="password" name="password2" placeholder="Vuelva a introducir su contraseña">
 						</div>
 						<div class="form-group">
-							<label for="email">Dirección de Email</label>
+							<label for="email">Dirección de Email *</label>
 							<input type="text" class="email form-control" id="email" name="email" placeholder="Introduzca su email">
 						</div>
 						<div class="form-group">
-							<label for="date">Fecha de nacimiento</label>
+							<label for="date">Fecha de nacimiento *</label>
 							<input type="date" class="date form-control" id="date" name="date" placeholder="dd/mm/aaaa">
 						</div>
 						<div class="checkbox">
-							<input type="checkbox" style="width: 32px">
-							<label>	Acepto las condiciones y confirmo que he leído la política de datos de la empresa, así como el uso de cookies.
+							<input class="check" type="checkbox" style="width: 32px">
+							<label>* Acepto las condiciones y confirmo que he leído la política de datos de la empresa, así como el uso de cookies.
 							</label>							
 						</div>
 						<div style="display:none" class="password-error alert alert-danger" role="alert">
@@ -78,9 +78,19 @@
 							<span class="sr-only"></span>
 							<span class="text"></span>
 						</div>
+						<div style="display:none" class="check-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>
+						<div style="display:none" class="param-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
-							<button type="submit" class="btn btn-success pull-right">Guardar</button>
+							<button type="submit" class="guardar btn btn-success pull-right">Guardar</button>
 						</div>
 					</form>
 				</div>
