Cargar evento del header en todas las clases

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<div id="load-header"></div>
 		<div id="load-registry"></div>
 		<div id="load-log"></div>
+		<div id="load-event"></div>
 
 		<div id="content">
 			<div class="jumbotron">
