--- a/listaEventos.html
+++ b/listaEventos.html
@@ -14,13 +14,13 @@
     <script src="static/listaEventos.js"></script>
 
 </head>
-
 <body>
     <div id="wrapper">
         <!--Cargar el header con los formularios de registro y login del header-footer.html-->
         <div id="load-header"></div>
         <div id="load-registry"></div>
         <div id="load-log"></div>
+        <div id="load-event"></div>
     <!-- Page Content -->
     <div class="container" id="eventList">
         <!-- Page Heading -->
