--- a/profile_prueba.html
+++ b/profile_prueba.html
@@ -10,7 +10,7 @@
 	<meta charset="UTF-8">
 
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 	<title>erasmusMadrid | Perfil</title>
 
 	<script src="./static/script.js"></script>
