--- a/header-footer.html
+++ b/header-footer.html
@@ -22,7 +22,7 @@
 	    		<button type="button" class="button-nav userProfile" id="log" style="display:none" ></button>
 		        <button type="button" class="button-nav logIn" id="log" data-toggle="modal" data-target="#formLogModal">Log in</button>
 		       	<button type="button" class="button-nav signIn" id="sign" data-toggle="modal" data-target="#formRegistryModal">Sign in</button>
-		       	<button type="button" class="button-nav createEvent" id="createEvent" data-toggle="modal" data-target="#formCreateEvent" style="display:none">Crear Evento</button>
+		       	<button type="button" class="button-nav createEvent" id="createEvent" data-toggle="modal" data-target="#formCreateEvent" style="display:none">Crear evento</button>
 		       	<button type="button" class="button-nav signOut" id="sign" style="display:none" onclick='signOut()'>Sign out</button>
 		    </div>
 	    </div>
@@ -50,34 +50,34 @@
 							<label for="password">Contraseña *</label>
 							<input type="password" class="password2 form-control" id="password" name="password2" placeholder="Vuelva a introducir su contraseña">
 						</div>
-						<div class="form-group">
-							<label for="email">Dirección de Email *</label>
-							<input type="text" class="email form-control" id="email" name="email" placeholder="Introduzca su email">
-						</div>
-						<div class="form-group">
-							<label for="date">Fecha de nacimiento *</label>
-							<input type="date" class="date form-control" id="date" name="date" placeholder="dd/mm/aaaa">
-						</div>
-						<div class="checkbox">
-							<input class="check" type="checkbox">
-							<label>* Acepto las condiciones y confirmo que he leído la política de datos de la empresa, así como el uso de cookies.
-							</label>							
-						</div>
 						<div style="display:none" class="password-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
+						</div>
+						<div class="form-group">
+							<label for="email">Dirección de Email *</label>
+							<input type="text" class="email form-control" id="email" name="email" placeholder="Introduzca su email">
+						</div>
 						</div>
 						<div style="display:none" class="email-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
 						</div>
+						<div class="form-group">
+							<label for="date">Fecha de nacimiento *</label>
+							<input type="date" class="date form-control" id="date" name="date" placeholder="dd/mm/aaaa">
+						</div>
 						<div style="display:none" class="date-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
 						</div>
+						<div class="checkbox">
+							<input class="check" type="checkbox">
+							<label>* Acepto las condiciones y confirmo que he leído la política de datos de la empresa, así como el uso de cookies.
+							</label>							
 						<div style="display:none" class="check-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
@@ -139,14 +139,19 @@
 					<h4 class="modal-title" id="formModalLabel"><strong>Formulario creación de evento</strong></h4>
 				</div>
 				<div class="modal-body">
-					<form method="POST" action="/insertNewEvent">
+					<form class="event-modal" method="POST" action="/insertNewEvent">
 						<div class="form-group">
-							<label for="title">Título</label>
-							<input type="text" class="form-control" id="title" name="title" placeholder="Introduzca el título">
+							<label for="title">Título *</label>
+							<input type="text" class="titulo form-control" id="title" name="title" placeholder="Introduzca el título">
 						</div>
 						<div class="form-group">
-							<label for="descripcion">Descripción</label>
-							<input type="descripcion" class="form-control" id="descripcion" name="descripcion" placeholder="Introduzca la descripción del evento">
+							<label for="descripcion">Descripción *</label>
+							<textarea type="text" class="descripcion form-control" id="descripcion" name="descripcion" placeholder="Introduzca la descripción del evento"></textarea>
+						</div>
+						<div style="display:none" class="desc-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
 						</div>
 						<div class="form-group">
 							<label for="Categoria">Categoría</label>
@@ -157,21 +162,26 @@
                         	</select>
 						</div>
 						<div class="form-group">
-							<label for="direccion">Dirección del evento</label>
-							<input type="direccion" class="form-control" id="direccion" name="direccion" placeholder="Introduzca la dirección del evento">
+							<label for="direccion">Dirección del evento *</label>
+							<input type="text" class="direccion form-control" id="direccion" name="direccion" placeholder="Introduzca la dirección del evento">
 						</div>
 						<div class="form-group">
-							<label for="date">Fecha del evento</label>
-							<input type="date" class="form-control" id="date" name="date" placeholder="dd/mm/aaaa">
+							<label for="date">Fecha del evento *</label>
+							<input type="text" class="fecha form-control" id="date" name="date" placeholder="dd/mm/aaaa">
 						</div>
 							<div class="form-group">
-							<label for="comentario">Comentario</label>
-							<input type="comentario" class="form-control" id="comentario" name="comentario" placeholder="Introduzca un comentario relacionado con el evento">
+							<label for="comentario">Eslogan</label>
+							<input type="text" class="form-control" id="comentario" name="comentario" placeholder="Introduzca un comentario relacionado con el evento">
 						</div>
 						<div>
-							<label for="foto">Introduzca foto del evento</label>
-							<input type="file" name="img">  
-						</div>						
+							<label for="foto">Introduzca fotos para el evento (mínimo 1)</label>
+							<input type="file" name="img"> 
+							<input type="file" name="img">
+							<input type="file" name="img">
+							<input type="file" name="img">
+							<input type="file" name="img">
+						</div>
+						<br></br>					
 						<div class="modal-footer">
 							<button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
 							<button type="submit" class="btn btn-success pull-right">Guardar</button>
