--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			    <div class="container">
 			        <h1>erasmusMadrid</h1>
 			        <p>Descubre, Comparte, Disfruta</p>
-			        <a href="evento.html">Aprende más</a>
+			        <a href="listaEventos.html">Aprende más</a>
 			    </div>
 			</div>
 
