--- a/listaEventos.html
+++ b/listaEventos.html
@@ -9,19 +9,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+ 
     <meta charset="UTF-8">
     <title>erasmusMadrid | Lista de eventos</title>
 
     <script src="static/listaEventos.js"></script>
+    <script src="static/script.js"></script>
 
 </head>
+
 <body>
     <div id="wrapper">
         <!--Cargar el header con los formularios de registro y login del header-footer.html-->
         <div id="load-header"></div>
         <div id="load-registry"></div>
         <div id="load-log"></div>
-        <div id="load-event"></div>
     <!-- Page Content -->
     <div class="container" id="eventList">
         <!-- Page Heading -->
@@ -32,16 +34,11 @@
                         <p></p>
                         <p></p>
                         <p>Categoría</p>
-                        <select>
-                             <option value="todos">Todos</option>
-                             <option value="turismo">Turismo</option>
-                             <option value="gastronomia">Gastronomía</option>
-                             <option value="vidaNocturna">Vida nocturna</option>
-                        </select>
-                        <select>
-                             <option value="recentDate">Más reciente</option>
-                             <option value="lastDate">Más antigua</option>
-                             <option value="mvp">Mejor valorada</option>
+                            <select id="sel_categ">
+                             <option class="refresh" value="Todos">Todos</option>
+                             <option class="refresh" value="Turismo">Turismo</option>
+                             <option class="refresh" value="Gastronomía">Gastronomía</option>
+                             <option class="refresh" value="Vida nocturna">Vida nocturna</option>
                         </select>
                         <form id="tfnewsearch" method="get" action="http://www.google.com">
                             <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="search" class="tfbutton">
@@ -60,128 +57,13 @@
             <div class="col-md-5">
                 <h3 id="title"></h3>
                 <p id="description"></p>
+                <p id="time"></p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
                 <a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
             </div>
             <hr>
         </div>
-
-
-        <!-- Project One
-        <div class="row">
-            <div class="col-md-7">
-                <img class="img-responsive" src="./static/bp1.jpg" style="width:653px;height:280px;">
-            </div>
-            <div class="col-md-5">
-                <h3 id="title"></h3>
-                <h4><div id="14270474947719" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:40" type="text/javascript"></script></div></h4>
-                <p id="description">
-                </p>
-                <p id="time"></p>
-                <p id="address"></p>
-                <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-            <hr>
-        </div>
-		-->
-
-
-
-        <!-- Project Two
-        <div class="row">
-            <div class="col-md-7">
-                <img class="img-responsive" src="./static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
-            </div>
-            <div class="col-md-5">
-                <h3>Conoce Madrid</h3>
-                <h4><div id="14270474947718" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:40" type="text/javascript"></script></h4>
-                <p>Disfruta de una visita guiada gratuita por el Madrid de los Austrias y los Borbones, en castellano y en inglés, todos los sábados y domingos a las 11 frente al oso y el madroño.</p>
-                 <p>Enjoy a free tour around the royal Madrid, in English and Spanish, every saturday and sunday at 11 in front of the oso y el madroño statue.</p>
-                <a class="btn btn-primary" href="#">Ver evento  <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-            <hr>
-        </div>
-        -->
-
-
-
-        <!-- Project Three
-        <div class="row">
-            <div class="col-md-7">
-                <img class="img-responsive" src="./static/AranjuezTour.jpg" style="width:653px;height:280px;">
-            </div>
-            <div class="col-md-5">
-                <h3>Visita Aranjuez</h3>
-                <h4><div id="14270474947716" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:41" type="text/javascript"></script></h4>
-                <p>Seguimos conociendo los alrededores más bonitos de Madrid, en esta ocasión visita guiada a Aranjuez y Chinchón, Sábado 11 de Abril, 19 euros transporte incluido, quedamos a las 9:00 en la estación de Atocha.</p>
-                <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-            <hr>
-        </div>
-        -->
-
-        <!-- Project Four
-        <div class="row">
-            <div class="col-md-7">
-                <img class="img-responsive" src="./static/Bravas.jpg" style="width:653px;height:280px;">
-            </div>
-            <div class="col-md-5">
-                <h3>Bravas y Cerves</h3>
-                <h4><div id="14270474947716" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947716:3:000000:41" type="text/javascript"></script></h4>
-                <p>Disfruta de la tapa más famosa de Madrid acompañada de otros estudiantes de Erasmus con los que podrás practicar el Castellano y otros idiomas, todos los Martes a las 19:00 casa Pepe.</p>
-                <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-            <hr>
-        </div>
-        -->
-
-        <!-- Project Five
-        <div class="row">
-            <div class="col-md-7">
-                    <img class="img-responsive" src="./static/fiesta erasmus.jpg" style="width:653px;height:280px;">
-            </div>
-            <div class="col-md-5">
-                <h3>Erasmus Party</h3>
-                <h4><div id="14270474947716" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947716:3:000000:41" type="text/javascript"></script></h4>
-                <p>Ven a la fiesta Erasmus más diverdida de Madrid, todos los lunes y miércoles en la sala Joy, Madrid... nunca duerme.</p>
-                <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        -->
-
-        <!-- Pagination -->
-        <div class="row text-center">
-            <div class="col-lg-12">
-                <ul class="pagination">
-                    <li>
-                        <a href="#">&laquo;</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                    <li>
-                        <a href="#">4</a>
-                    </li>
-                    <li>
-                        <a href="#">5</a>
-                    </li>
-                    <li>
-                        <a href="#">&raquo;</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
         <!-- /.row -->
-
-        <hr>
-
-
     </div><!-- Footer -->
         <footer>
             <div id="load-footer"></div>
